# ILAFF

./: .gitignore  README.md  dev-requirements.in  dev-requirements.txt  pylintrc  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: conf.py  ilaff.measurements.rst  index.rst
docs/source/: conf.py  ilaff.units.rst  index.rst
src/ilaff/: __init__.py  example.py  fast_fit.py  fit.py  utils.py
src/ilaff/measurements/: __init__.py  measurementJack.py  measurementObj.py
src/ilaff/units/: __init__.py  dimension.py  quantity.py  scale.py  unit.py  value.py
testing_data/: DATA_README.txt  confList.txt
tests/: test_fit.py  test_measurements.py  test_units.py
units/: __init__.py  scale.py  unit.py
